--- a/css/stayle.css
+++ b/css/stayle.css
@@ -68,6 +68,13 @@ body {
     font-weight: 250;
   }
 }
+@media (max-width: 360px){
+
+  .special-heading{
+    font-size: 40px;
+    font-weight: 200;
+  }
+}
 /* end Components */
 
 /* start header*/
